# masterthesis

./: .gitignore  .mailmap  README.md
cake/: Abs.hs
compiler/: compiler.cabal
compiler/app/: Main.hs  ParseEvaluate.hs  TestComp.hs  TestEval.hs  WithoutCallByNeed.hs
compiler/src/: AbsCakeML.hs  CakeMLSem.hs  Compile.hs  Evaluate.hs  Lib.hs  OldCode.hs  SemanticPrimitives.hs
planning/: planningreport.bbl  planningreport.blg  planningreport.org  ref.bib
proposal/: proposal.bbl  proposal.blg  proposal.org  proposal.tex  ref.bib
report/: Makefile  ProjectSummary.org  main.tex
report/appendices/: AST.tex  Compiler.tex  SemPrim.tex
report/backmatter/: ref.bib
report/chapters/: Background.tex  CallByNeed.tex  Compiler.tex  Conclusion.tex  FutureWork.tex  Goals_Limitations.tex  Introduction.tex  LazySemantics.tex  StrictSemantics.tex
report/frontmatter/: Abstract.tex  Acknowledgements.tex  Imprint.tex  Title.tex
report/mainparts/: CakeML.tex  CallByNeed.tex  Compiler.tex  Introduction.tex  LazySemantics.tex  ProjectDesc.tex
report/old/mainparts/: Compiler.tex  ExampleCode.hs  ProjectDesc.tex
report/settings/: packagescommands.tex  settings.tex
sml/: Interpreter.hs
