name:                compiler
version:             0.1.0.0
synopsis:            Compiler to translate lazy CakeML to standard CakeML
description:         Please see README.md
homepage:            https://github.com/th4m/masterthesis
license:             BSD3
license-file:        LICENSE
author:              Philip Tham
maintainer:          example@example.com
copyright:           2017 Philip Tham
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       containers > 0.5 && < 0.6,
                       parsec > 3.1 && < 3.2
  default-language:    Haskell2010

executable compiler-exe
  hs-source-dirs:      app
  main-is:             ParseEvaluate.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , compiler
  default-language:    Haskell2010

test-suite compiler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , compiler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/compiler
